# zeta-bench

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: coverage.yml  diagram-check.yml  docker.yml
adversary/: __init__.py  adversary_policy.py
configs/: adversary.yaml  env.yaml  eval.yaml  eval_pid.yaml  eval_rl.yaml  eval_robustness.yaml  eval_robustness_profile.yaml  hpo_ppo.yaml  hpo_sac.yaml  pid_controller.yaml  reward.yaml  robustness_card.yaml  train.yaml  train_profile.yaml
configs/agent/: pid.yaml  ppo.yaml  sac.yaml  sac_tuned.yaml
configs/budget/: full.yaml  laptop.yaml
configs/compute/: cpu.yaml  kaggle_gpu.yaml  large_gpu.yaml  mps.yaml  multi_gpu.yaml  small_gpu.yaml
configs/profile/: progressive.yaml  smoke.yaml
controllers/: __init__.py  _sb3_logging.py  pid_baseline.py  ppo_agent.py  sac_agent.py
docker/: sm-entrypoint.sh
docs/: env_config_reference.md  reward_engineering.md  usage.md
dynamics/: __init__.py  base.py  equations_of_motion.py  moderate_fidelity.py  types.py
envs/: __init__.py  curriculum.py  domain_randomization.py  reward.py  rocket_landing_env.py
experiments/: __init__.py  evaluate_pid.py  evaluate_rl.py  evaluate_robustness.py  export_best_params.py  robustness_card.py  sagemaker_launch.py  train.py  train_profile.py
notebooks/: kaggle_train.ipynb  physics_derivation.ipynb
results/: README.md  robustness_matrix.csv
results/cards/: pid.json  ppo.json  sac.json
robustness/: __init__.py  cards.py  disturbances.py  evaluation.py  heatmap.py  progressive.py  verification.py
scripts/: check_diagram_sync.py
tests/: test_agents.py  test_cards.py  test_controller_specs.py  test_curriculum.py  test_disturbance_dynamics.py  test_disturbances.py  test_domain_randomization.py  test_env.py  test_env_disturbances.py  test_evaluate_pid.py  test_evaluate_rl.py  test_export_best_params.py  test_normalisation.py  test_physics.py  test_physics_edge_cases.py  test_physics_properties.py  test_pid.py  test_progressive_profile.py  test_render.py  test_reward.py  test_robustness_eval.py  test_smoke.py  test_train_register.py  test_verification.py  test_wandb_setup.py
utils/: __init__.py  logging_config.py  normalisation.py  render.py  reproducibility.py  sb3_callbacks.py  wandb_setup.py
