[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeta-bench"
version = "0.1.0"
description = "Physics-grounded robustness characterization for control systems."
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ZetaBench contributors" }]
readme = "README.md"
dependencies = [
    "numpy>=2.0",
    "gymnasium>=1.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "python-dotenv>=1.0",
    "wandb>=0.17",
    "matplotlib>=3.8",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
]

[project.optional-dependencies]
# PyTorch dropped x86_64 macOS wheels in 2.3, so torch + SB3 live in an
# opt-in extra. Local development on Intel Mac runs fine without them;
# install `.[train]` on Linux or Apple Silicon to actually train.
train = [
    "stable-baselines3>=2.3",
    "torch>=2.3",
    "hydra-optuna-sweeper>=1.2",   # TPE/Bayesian HPO via `--config-name=hpo_{sac,ppo}`
]
# Launch-side only (SageMaker Studio / laptop) — submits Training Jobs via
# experiments/sagemaker_launch.py. Never installed into the training image.
cloud = [
    "sagemaker>=2.200",
    "boto3>=1.34",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.5",
    "hypothesis>=6.100",
]

[tool.setuptools.packages.find]
include = [
    "dynamics*",
    "envs*",
    "controllers*",
    "adversary*",
    "experiments*",
    "utils*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage on every `pytest` invocation. To run a single test without the
# gate during debugging, use `pytest --no-cov` or `pytest --cov-fail-under=0`.
addopts = [
    "-v",
    "--cov=dynamics",
    "--cov=envs",
    "--cov=controllers",
    "--cov=utils",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=90",
]

[tool.coverage.run]
omit = [
    # SB3/torch-backed agents — exercised only with the optional `train`
    # extra installed; integration-tested via `pytest.importorskip` so the
    # coverage gate stays meaningful on machines without torch.
    "controllers/sac_agent.py",
    "controllers/ppo_agent.py",
    "utils/sb3_callbacks.py",
    # adversary lands in Phase 3
    "adversary/*",
    "experiments/*",
    "utils/logging_config.py",
    # __init__.py files are import-time only; exclude to keep the gate
    # focused on logic
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
